# lmrframe

./: CMakeLists.txt  README.md  main.cpp
inc/: baseinc.h  clock.h  ini.h  lmrcfg.h  lmrinc.h  lmrlog.h  lmrtypes.h  logger.h  mutex.h  obj.h  pool.hpp  version.h
src/: clock.cpp  ini.cpp  logger.cpp  mian.cpp  mutex.cpp  obj.cpp
test/: main.cpp  test.h  test_clock.cpp  test_ini.ini
test/inc/: test.h
test/src/: main.cpp  test_clock.cpp  test_ini.cpp  test_pool.cpp
